# mongo-perf

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  main.yml  release.yml
src/: main.rs
tests/: cli.rs
tools/: docker-compose.yml
