[package]
name = "mongodb-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }
clap = "2"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"